# OOP

lab1/: CMakeLists.txt  README.md  func.cpp  func.hpp  main.cpp  test.cpp
lab2/: CMakeLists.txt  constructors.cpp  main.cpp  operators.cpp  six.cpp  six.hpp  test.cpp
lab3/: .gitignore  CMakeLists.txt  array.cpp  array.hpp  figure.hpp  hexagon.cpp  hexagon.hpp  main.cpp  octagon.cpp  octagon.hpp  test.cpp  triangle.cpp  triangle.hpp
lab4/: .gitignore  CMakeLists.txt  array.hpp  figure.hpp  functions.hpp  hexagon.hpp  main.cpp  octagon.hpp  test.cpp  triangle.hpp
lab5/: .gitignore  CMakeLists.txt  allocator.hpp  main.cpp  stack.hpp  test.cpp
lab6/: CMakeLists.txt  bear.cpp  bear.hpp  factory.cpp  factory.hpp  knight.cpp  knight.hpp  main.cpp  npc.cpp  npc.hpp  observer.cpp  ork.cpp  ork.hpp  tests.cpp
lab7/: .gitignore  CMakeLists.txt  bear.cpp  bear.hpp  knight.cpp  knight.hpp  main.cpp  npc.cpp  npc.hpp  ork.cpp  ork.hpp  tests.cpp
